# pyq-engine

./: README.rst  pyproject.toml
pyq_engine/: app.py  plot.py  utils.py
pyq_engine/components/: __init__.py  annotations.py  button.py  controls.py  metadata.py  plot.py  tabs.py  warning.py
pyq_engine/tools/: archive.py  explorer.py
tests/: test_pyq_engine.py  test_sample_serdes.py
tools/: archive.py
