[tool.poetry]
name = "pyq-engine"
version = "0.1.0"
description = ""
authors = ["Liam Beguin <liambeguin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dash-bootstrap-components = "^1.4.2"
dash-daq = "^0.5.0"
pandas = "^2.1.0"
SigMF = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
